<resources>
    <string name="app_name">校园考勤系统</string>
    <string name="contentDescription">TODO</string>
    <string name="account_prompt">请输入账号</string>
    <string name="password_prompt">请输入密码</string>
    <string name="new_password_prompt">请输入新密码</string>
    <string name="confirm_password_prompt">请确认密码</string>
    <string name="user_type">用户角色：</string>
    <string name="teacher">教师</string>
    <string name="student">学生</string>
    <string name="forget_password">忘记密码？</string>
    <string name="register">注册</string>
    <string name="login">登 录</string>
    <string name="name_prompt">请输入姓名</string>
    <string name="schoolNumber_prompt">请输入学号</string>
    <string name="teacherNumber_prompt">请输入工号</string>
    <string name="class_prompt">例：计科1班</string>
    <string name="phone_prompt">请输入电话号码</string>
    <string name="email_prompt">请输入电子邮箱</string>
    <string name="wait_message">请求执行中，请等待</string>
    <string name="image_wait_message">处理图片中，请等待</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_register_avatar">头像：</string>
    <string name="confirm">验证</string>
    <string name="send">发送</string>
    <string name="confirm_prompt">请点击发送，将收到的验证码填写在下方的输入框进行手机号验证（验证码有效期为十五分钟，如未收到验证码可在一分钟后重新发送）</string>
    <string name="confirm_code">验证码：</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="ok">确 定</string>
    <string name="cancel">取 消</string>
    <string name="confirm_code_prompt">请输入验证码</string>
    <string name="common_code_send">发送验证码</string>
    <string name="modify_course_info">修改课程信息</string>
    <string name="delete_course">删除课程</string>
    <string name="confirm_location">确 认 坐 标</string>
    <string name="sign_in">开始签到</string>
    <string name="leave_time">请假时间：</string>
    <string name="delete_student">删除学生</string>
    <string name="common_cancel">取消</string>
    <string name="common_confirm">确定</string>

    <string-array name="menu_record_result">
        <item>缺 勤</item>
        <item>请 假</item>
        <item>成 功</item>
    </string-array>

    <string-array name="menu_attend_type">
        <item>GPS</item>
        <item>人脸识别+GPS</item>
        <item>手势签到+GPS</item>
    </string-array>
</resources>