<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:layoutAnimation="@anim/layout_from_bottom"
    android:orientation="vertical"
    android:id="@+id/activity_login"
    android:clickable="true"
    android:focusable="true"
    android:onClick="onClick"
    tools:context=".activity.login.LoginActivity"
    tools:layoutAnimation="@null">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_70"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dp_310"
            android:text="@string/register"
            android:textSize="@dimen/fontSize_2"
            android:textColor="@color/common_accent_color"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_login_logo"
        android:layout_width="@dimen/dp_120"
        android:layout_height="@dimen/dp_120"
        android:layout_marginVertical="@dimen/dp_10"
        app:srcCompat="@drawable/icon_main" />

    <LinearLayout
        android:id="@+id/ll_login_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.hjq.widget.view.ClearEditText
            android:id="@+id/login_account"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_10"
            android:hint="@string/account_prompt"
            android:inputType="text"
            android:singleLine="true"/>

        <View
            style="@style/HorizontalLineStyle"
            android:layout_marginHorizontal="@dimen/dp_40" />

        <com.hjq.widget.view.PasswordEditText
            android:id="@+id/login_password"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_15"
            android:hint="@string/password_prompt"
            android:imeOptions="actionDone"
            android:maxLength="20"
            android:singleLine="true" />

        <View
            style="@style/HorizontalLineStyle"
            android:layout_marginHorizontal="@dimen/dp_40" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/user_type"
                android:textSize="@dimen/fontSize_2" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/login_radio_student"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/dp_5"
                    android:text="@string/student"
                    android:textSize="@dimen/fontSize_2"/>

                <RadioButton
                    android:id="@+id/login_radio_teacher"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/dp_5"
                    android:text="@string/teacher"
                    android:textSize="@dimen/fontSize_2"/>
            </RadioGroup>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/login_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_50"
            android:text="@string/forget_password"
            android:textColor="@color/common_accent_color"
            android:textSize="@dimen/fontSize_1"/>

        <Button
            android:id="@+id/login_button"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_30"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/fontSize_2"/>

    </LinearLayout>

</LinearLayout>