<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/activity_modify_password"
    android:clickable="true"
    android:focusable="true"
    android:onClick="onClick"
    tools:context=".activity.login.ModifyPasswordActivity">

    <include layout="@layout/action_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="账号："
            android:textSize="@dimen/fontSize_2" />

        <com.hjq.widget.view.ClearEditText
            android:id="@+id/modify_password_account"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_50"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_weight="1"
            android:hint="@string/account_prompt"
            android:inputType="text"
            android:paddingStart="@dimen/dp_10"
            android:paddingTop="@dimen/dp_5"
            android:paddingEnd="@dimen/dp_5"
            android:paddingBottom="@dimen/dp_5"
            android:singleLine="true"/>
    </LinearLayout>

    <View
        style="@style/HorizontalLineStyle"
        android:layout_marginHorizontal="@dimen/dp_40" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="账号："
            android:textSize="@dimen/fontSize_2" />

        <RadioButton
            android:id="@+id/modify_password_teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/teacher" />

        <RadioButton
            android:id="@+id/modify_password_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:text="@string/student" />
    </RadioGroup>

    <View
        style="@style/HorizontalLineStyle"
        android:layout_marginHorizontal="@dimen/dp_40" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="手机号："
            android:textSize="@dimen/fontSize_2" />

        <com.hjq.widget.view.ClearEditText
            android:id="@+id/modify_password_phone"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_50"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_weight="1"
            android:hint="@string/phone_prompt"
            android:inputType="phone"
            android:paddingStart="@dimen/dp_10"
            android:paddingTop="@dimen/dp_5"
            android:paddingEnd="@dimen/dp_5"
            android:paddingBottom="@dimen/dp_5"
            android:singleLine="true"/>
    </LinearLayout>

    <View
        style="@style/HorizontalLineStyle"
        android:layout_marginHorizontal="@dimen/dp_40" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="新密码："
            android:textSize="@dimen/fontSize_2" />

        <com.hjq.widget.view.ClearEditText
            android:id="@+id/modify_password_old_password"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_50"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_weight="1"
            android:hint="@string/password_prompt"
            android:inputType="textPassword"
            android:paddingStart="@dimen/dp_10"
            android:paddingTop="@dimen/dp_5"
            android:paddingEnd="@dimen/dp_5"
            android:paddingBottom="@dimen/dp_5"
            android:singleLine="true"/>

    </LinearLayout>

    <View
        style="@style/HorizontalLineStyle"
        android:layout_marginHorizontal="@dimen/dp_40" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="确认密码："
            android:textSize="@dimen/fontSize_2" />

        <com.hjq.widget.view.ClearEditText
            android:id="@+id/modify_password_new_password"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_50"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_weight="1"
            android:hint="@string/confirm_password_prompt"
            android:inputType="textPassword"
            android:paddingStart="@dimen/dp_10"
            android:paddingTop="@dimen/dp_5"
            android:paddingEnd="@dimen/dp_5"
            android:paddingBottom="@dimen/dp_5"
            android:singleLine="true"/>

    </LinearLayout>

    <View
        style="@style/HorizontalLineStyle"
        android:layout_marginHorizontal="@dimen/dp_40" />

    <Button
        android:id="@+id/modify_password_submit"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_30"
        android:text="进入验证"
        android:letterSpacing="0.2"
        android:textColor="@color/white"
        android:textSize="@dimen/fontSize_2"/>

</LinearLayout>